[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "laion_clap"
version = "1.1.6"
authors = [
  { name="Ke Chen", email="knutchen@ucsd.edu" },
  { name="Yusong Wu" },
  { name="Tianyu Zhang" },
  { name="Yuchen Hui" }
]
maintainers = [
  { name="Ke Chen", email="knutchen@ucsd.edu" },
  { name="Yusong Wu" },
  { name="Tianyu Zhang" },
  { name="Yuchen Hui" }
]
description = "Contrastive Language-Audio Pretraining Model from LAION"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "numpy >= 1.23.5, < 2.0.0",
  "soundfile",
  "librosa",
  "torchlibrosa",
  "ftfy",
  "braceexpand",
  "webdataset",
  "wget",
  "wandb",
  "llvmlite",
  "scipy>=1.15.0",
  "scikit-learn",
  "pandas>=2.2.0",
  "h5py",
  "tqdm",
  "regex",
  "transformers>=4.51.3",
  "progressbar",
  "torch>=2.4.0",
  "torchaudio>=2.4.0",
  "torchvision>=0.19.0"
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]


[project.urls]
"Homepage" = "https://github.com/LAION-AI/CLAP"
"Bug Tracker" = "https://github.com/LAION-AI/CLAP/issues"
